--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Eric's Rating Charts</title>
-		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-		<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
-		Head
-	</head>
-	<body>
-		body
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-	</body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Eric's Rating Charts</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/mdb.min.css" rel="stylesheet">
+    <link href="../static/css/style.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div style="height: 100vh">
+        <div class="flex-center flex-column">
+            <h3 class="animated fadeIn mb-3">Find a series</h3>
+            <!-- Search form -->
+            <form class="form-inline ">
+                <input class="form-control form-control-sm mr-3 w-auto" type="text" placeholder="Search" aria-label="Search">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </form>
+        </div>
+    </div>
+    <!-- /Start your project here-->
+
+    <!-- SCRIPTS -->
+    <!-- JQuery -->
+    <script type="text/javascript" src="../static/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="../static/js/popper.min.js"></script>
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../static/js/mdb.min.js"></script>
+</body>
+
 </html>
