--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,2 +1,54 @@
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-{{ chart_div | safe }}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Rating Charts - {{ title }}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/mdb.min.css" rel="stylesheet">
+    <link href="../static/css/style.min.css" rel="stylesheet">
+	<link href="../static/css/style.css" rel="stylesheet">
+</head>
+<body>
+	<div class="edge-header deep-purple" style="height: 160px"></div>
+	<!-- Main Container -->
+	<div class="container free-bird">
+		<div class="row">
+			<div class="col-md-8 mx-auto float-none white z-depth-1 py-2 px-2">
+
+				<!--Naked Form-->
+				<div class="card-body">
+					<h2 class="h2-responsive"><strong>Rating Charts</strong></h2>
+					<p class="pb-4">Visualize TV Ratings</p>
+
+					<!--Body-->
+					<form action="?search=">
+						<h5 class="h5-responsive">Find a show</h5>
+						<!-- Basic textbox -->
+						<div class="md-form">
+							<input type="text" id="form1" class="form-control" placeholder="Breaking Bad" autocomplete="nope">
+						</div>
+						
+						<div class="text-xs-left">
+							<button class="btn btn-primary">Chart</button>
+						</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-8 mx-auto float-none white z-depth-1 px-2 py-2">
+			<div class="card-body">
+				<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+				{{ chart_div | safe }}
+			</div>
+		</div>
+	</div>
+	<br>
+</body>
+
+</html>
