--- a/templates/chart.html
+++ b/templates/chart.html
@@ -29,7 +29,7 @@
 						<h5 class="h5-responsive">Find a show</h5>
 						<!-- Basic textbox -->
 						<div class="md-form">
-							<input type="text" id="form1" class="form-control" placeholder="Breaking Bad" autocomplete="nope">
+							<input type="text" id="search" name="search" class="form-control" placeholder="Breaking Bad" autocomplete="nope">
 						</div>
 						
 						<div class="text-xs-left">
