--- a/templates/index.html
+++ b/templates/index.html
@@ -5,41 +5,67 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Rating Charts</title>
+    <title>Rating Charts - {{ title }}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/mdb.min.css" rel="stylesheet">
     <link href="../static/css/style.min.css" rel="stylesheet">
-    
+	<link href="../static/css/style.css" rel="stylesheet">
 </head>
-
 <body>
-    <div style="">
-        <div class="flex-center flex-column">
-            <h2 class="animated fadeIn mb-3">Find a series</h2>
-            <form class="animated fadeIn form-inline">
-                <input class="form-control form-control-sm mr-3 w-auto" type="text" id="search" name="search" placeholder="Search" aria-label="Search">
-                <i class="fa fa-search" aria-hidden="true"></i>
-            </form>
-        </div>
-    </div>
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="../static/js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="../static/js/popper.min.js"></script>
-    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../static/js/mdb.min.js"></script>
-    <script>
-        //from https://stackoverflow.com/questions/5053943/jquery-input-value-to-url-on-submit-question
-        $(document).ready(function() {
-            $('#search').submit( function() {  
-                let searchForm = $('#search').val();
-                let urlLink = "http://localhost:5000/chart/search?scale=False&search=" + searchInput;
-                    window.location = urlLink;
-            return false;
-            });
-        });
-    </script>
+	<div class="edge-header deep-purple" style="height: 160px"></div>
+	<!-- Main Container -->
+	<div class="container free-bird">
+		<div class="row">
+			<div class="col-md-8 mx-auto float-none white z-depth-1 py-2 px-2">
+
+				<!--Naked Form-->
+				<div class="card-body">
+					<h2 class="h2-responsive"><strong>Rating Charts</strong></h2>
+					<p class="pb-4">Visualize TV Ratings</p>
+
+					<!--Body-->
+					<form action="?">
+						<h5 class="h5-responsive">Find a show</h5>
+						<!-- Basic textbox -->
+						<div class="md-form">
+							<input type="text" id="search" name="search" class="form-control" placeholder="Breaking Bad" autocomplete="nope">
+						</div>
+						
+						<div class="row">
+							<div class="col">
+								<div class="form-check">
+									<input type="checkbox" class="form-check-input" id="scale">
+									<label class="form-check-label" for="materialUnchecked">Scale Y-Axis</label>
+								</div>
+							</div>
+							<div class="col">
+								<div class="form-check">
+									<input type="checkbox" class="form-check-input" id="scale">
+									<label class="form-check-label" for="materialUnchecked">Do other thing</label>
+								</div>
+							</div>
+						</div>
+						<br>
+					
+						<div class="text-xs-left">
+							<button class="btn btn-primary">Chart</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-md-8 mx-auto float-none white z-depth-1 px-2 py-2">
+			<div class="card-body">
+				<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+				{{ chart_div | safe }}
+			</div>
+		</div>
+	</div>
+	<br>
 </body>
 
 </html>
